[gd_scene load_steps=3 format=3 uid="uid://u3ntws768bcl"]

[ext_resource type="Script" path="res://scripts/interface.gd" id="1_7uc1d"]
[ext_resource type="Script" path="res://scripts/CameraMovement.gd" id="2_eejyx"]

[node name="Interface" type="Node"]
script = ExtResource("1_7uc1d")

[node name="TopPanel" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="MenuBar" type="HBoxContainer" parent="TopPanel"]
layout_mode = 2

[node name="File" type="MenuButton" parent="TopPanel/MenuBar"]
layout_mode = 2
text = "File"
item_count = 4
popup/item_0/text = "New"
popup/item_0/id = 0
popup/item_1/text = "Open"
popup/item_1/id = 1
popup/item_2/text = "Save"
popup/item_2/id = 2
popup/item_3/text = "Save as..."
popup/item_3/id = 3

[node name="Edit" type="MenuButton" parent="TopPanel/MenuBar"]
layout_mode = 2
text = "Edit"
item_count = 2
popup/item_0/text = "Undo"
popup/item_0/id = 0
popup/item_1/text = "Redo"
popup/item_1/id = 1

[node name="More" type="MenuButton" parent="TopPanel/MenuBar"]
layout_mode = 2
text = "More"
item_count = 1
popup/item_0/text = "About"
popup/item_0/id = 0

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.puz")
use_native_dialog = true

[node name="About" type="Popup" parent="."]
title = "About"
initial_position = 1
size = Vector2i(660, 299)
borderless = false

[node name="AboutText" type="RichTextLabel" parent="About"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "

[center][font_size=40][tornado radius=5 freq=5][rainbow sat=0.9 val=1.5 freq=0.2]WREN'S TAMETSI
PUZZLE CREATOR !!!!![/rainbow][/tornado][/font_size]

[font_size=20]by wren, look at [url=https://bugbard.neocities.org][color=#89e]my neocities[/color][/url] (it is old, sorry!)
this is not affiliated with Grip Top Games, go play [url=http://griptopgames.com/][color=#89e]Tametsi![/color][/url][/font_size]
[/center]

"

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("2_eejyx")

[node name="BottomPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0

[node name="Zoom" type="Label" parent="BottomPanel"]
layout_mode = 2
text = "100%"
vertical_alignment = 1

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="meta_clicked" from="About/AboutText" to="." method="_on_about_text_meta_clicked"]
